<resources>
  <string name="activity_exercise_completed_text">COMPLETED</string>
  <string name="activity_exercise_reps_hint">REPS</string>
  <string name="activity_exercise_weight_hint">WEIGHT (LB)</string>
  <string name="add_exercises">Add Exercises</string>
  <string name="app_name">Simple Workout Log</string>
  <string name="are_you_sure_close_exercise">Are you sure you want to close this exercise? Any unsaved changes will be lost.</string>
  <string name="cancel">Cancel</string>
  <string name="category">Category</string>
  <string name="delete">Delete</string>
  <string name="delete_item_confirmation">Are you sure you want to delete this %s?</string>
  <string name="dialog_delete_content_description">Delete Icon</string>
  <string name="dialog_edit_content_description">Edit Icon</string>
  <string name="discard">Discard</string>
  <string name="discard_changes">Discard changes?</string>
  <string name="drag_icon">Drag Icon</string>
  <string name="edit">Edit</string>
  <string name="edit_set">Edit Set</string>
  <string name="exercise">Exercise</string>
  <string name="filter">Filter</string>
  <string name="history">History</string>
  <string name="item_already_exists">%s already exists.</string>
  <string name="item_deleted">%s deleted.</string>
  <string name="item_updated">%s updated.</string>
  <string name="new_item">New %s</string>
  <string name="new_item_created">New %s created.</string>
  <string name="no">No</string>
  <string name="please_enter_at_least_1_rep">Please enter at least 1 rep</string>
  <string name="please_enter_name">Please enter a name.</string>
  <string name="rename">Rename</string>
  <string name="rename_item">Rename %s</string>
  <string name="rename_successful">Rename successful</string>
  <string name="routine">Routine</string>
  <string name="same_name">Same name.</string>
  <string name="save">Save</string>
  <string name="save_changes">Save changes?</string>
  <string name="set">Set</string>
  <string name="set_added">Set added.</string>
  <string name="workout">Workout</string>
  <string name="would_save_changes_routine">Would you like to save changes made to the routine?</string>
  <string name="yes">Yes</string>

  <string name="barbell_bench_press">Barbell Bench Press</string>
  <string name="barbell_bench_press_incline">Barbell Bench Press (Incline)</string>
  <string name="dumbbell_press">Dumbbell Press</string>
  <string name="dumbbell_press_incline">Dumbbell Press Incline</string>
  <string name="dumbbell_chest_fly">Dumbbell Chest Fly</string>
  <string name="chest">Chest</string>

  <string name="barbell_back_squat">Barbell Back Squat</string>
  <string name="barbell_front_squat">Barbell Front Squat</string>
  <string name="barbell_lunge">Barbell Lunge</string>
  <string name="romanian_deadlift">Romanian Deadlift</string>
  <string name="leg_press_machine">Leg Press Machine</string>
  <string name="legs">Legs</string>

  <string name="barbell_curl">Barbell Curl</string>
  <string name="ez_bar_biceps_curl">E-Z Bar Biceps Curl</string>
  <string name="alternating_dumbbell_curl">Alternating Dumbbell Curl</string>
  <string name="hammer_dumbbell_curl">Hammer Dumbbell Curl</string>
  <string name="standing_cable_curl">Standing Cable Curl</string>
  <string name="biceps">Biceps</string>

  <string name="bench_press_close_grip">Bench Press (Close Grip)</string>
  <string name="dip">Dip</string>
  <string name="triceps_pushdown">Triceps Pushdown</string>
  <string name="ez_bar_skull_crushers">E-Z Bar Skull Crushers</string>
  <string name="dumbbell_overhead_triceps_press">Dumbbell Overhead Triceps Press</string>

  <string name="triceps">Triceps</string>
  <string name="deadlift">Deadlift</string>
  <string name="barbell_row">Barbell Row</string>
  <string name="dumbbellRow">Dumbbell Row</string>
  <string name="t_bar_row">T-Bar Row</string>
  <string name="lat_pulldown">Lat Pulldown</string>
  <string name="back">Back</string>

  <string name="overhead_press">Overhead Press</string>
  <string name="dumbbell_front_raise">Dumbbell Front Raise</string>
  <string name="dumbbell_side_lateral_raise">Dumbbell Side Lateral Raise</string>
  <string name="seated_dumbbell_press">Seated Dumbbell Press</string>
  <string name="dumbbell_incline_row">Dumbbell Incline Row</string>
  <string name="shoulders">Shoulders</string>

  <string name="title_activity_exercise">ExerciseActivity</string>
  <string name="reset">Reset</string>
  <string name="play">Play</string>
  <string name="timer_start_value">2:00</string>
  <string name="colon">:</string>
  <string name="pause">Pause</string>
  <string name="set_timer">Set Timer</string>
  <string name="countdown_timer_channel_name">Countdown Timer</string>
  <string name="countdown_timer_channel_description">Timer countdown shown in notifications.</string>
  <string name="timer_finished_channel_name">Timer Finished</string>
  <string name="timer_finished_channel_description">Notification when timer finisheds </string>
  <string name="time_left">Time Left:</string>
  <string name="timer_finished">Timer Finished</string>
  <string name="settings">Settings</string>
  <string name="delete_all_workouts">Delete All Workouts</string>
  <string name="delete_all_items">Delete All Exercises, Categories, and Routines</string>
  <string name="import_default_items">Import Default Exercises, Categories, Routines</string>
  <string name="auto_start_timer">Auto start timer after set is added.</string>
  <string name="import_successful">Import Successful</string>
  <string name="all_exercises_categories_routines_deleted">All exercises, categories, and routines deleted</string>
  <string name="are_you_sure_import_default">Are you sure want to import the default exercises, categories, and routines?</string>
  <string name="are_you_sure_delete_all">Are you sure want to delete all exercises, categories, and routines?</string>
  <string name="all_workouts_deleted">All workouts deleted</string>
  <string name="are_you_sure_delete_all_workouts">Are you sure want to delete all workouts?</string>
  <string name="strong_5x5_workout_a">Strong 5x5 - Workout A</string>
  <string name="strong_5x5_workout_b">Strong 5x5 - Workout B</string>

</resources>
