...

        <include
          android:id="@+id/exercise_set_editor"
          layout="@layout/exercise_set_editor"/>

        <Button
          android:id="@+id/add_set_button"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/ic_add_circle_black_24dp"/>
      </LinearLayout>

...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/finish_exercise_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      android:layout_gravity="bottom|end"
      android:tint="@color/white"
      app:srcCompat="@drawable/ic_check_black_24dp"/>
...
