...
        android:layout_weight="1"
        android:contentDescription="@string/reset"
        app:srcCompat="@drawable/ic_settings_backup_restore_white_24dp"/>
      <TextView
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/timer_display"
        android:layout_width="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/timer_start_value"
        android:textSize="30sp"/>
      <ImageView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/timer_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/play"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"/>
    </LinearLayout>
...
